--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Puppycat's Python Journey
+name: Nora's Python Journey
 
 # Short bio or description (displayed in the header)
-description: I love spinach meow meow meow
+description: I like math, economics, and computer science!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/PIC16B/PIC16B.github.io/master/images/ucla-math.png
@@ -18,12 +18,12 @@ avatar: https://raw.githubusercontent.com/PIC16B/PIC16B.github.io/master/images/
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: adanora@g.ucla.edu
   facebook:
   flickr:
-  github: HarlinLee/HarlinLee.github.io # replace with your repo
-  instagram:
-  linkedin:
+  github: NoraAdadurova/NoraAdadurova.github.io # replace with your repo
+  instagram: instagram.com/nora__ada/
+  linkedin: linkedin.com/in/nora-adadurova-ucla/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
