--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Nora's Python Journey
 description: I like math, economics, and computer science!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/PIC16B/PIC16B.github.io/master/images/ucla-math.png
+avatar: https://avatars.githubusercontent.com/u/107182340?s=400&u=036ac1ad1101a2043da87bf2c31081382c249e11&v=4
 
 #
 # Flags below are optional
